[fix] Correct issue with hardcoded pathnames Had an issue where usersnames were hardcoded for git_commit_message_template. This is no longer an issue as the config is being set dynamically in zsh.

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,5 +1,5 @@
 [core]
 	editor = code -rw
 [commit]
-	template = /Users/nland2/.git_commit_message_template
 	verbose = true
+	template = /Users/cl-dev/.git_commit_message_template
