[feat] Add user details to gitconfig

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -2,4 +2,6 @@
 	editor = code -rw
 [commit]
 	verbose = true
-	template = /Users/cl-dev/.git_commit_message_template
+[user]
+	email = land.d.nicholas@gmail.com
+	name = Nick Land
