[feat] add vim bindings to tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,5 +9,14 @@ bind - split-window -v
 unbind '"'
 unbind %
 
+# Vim keybind movements
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
+# Set tmux to Vi mode
+set-window-option -g mode-keys vi
+
 # Reload config file
 bind r source-file ~/.tmux.conf
