:wrench: Add config files This introduces Fish config files, and some changes that I don't know about for doom, zsh, git, and emacs vanilla. I should take better care of my dotfiles.

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,8 +4,8 @@
 	verbose = true
 	template = /Users/nland/.git_commit_message_template
 [user]
-	name = Nick Land
-	email = land.d.nicholas@gmail.com
+	name = Nicholas
+	email = Land
 [merge]
     tool = vscode
 [mergetool "vscode"]
