--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,7 +4,7 @@
 	verbose = true
 	template = /Users/nland/.git_commit_message_template
 [user]
-	name = Nicholas
+	name = Nick
 	email = Land
 [merge]
     tool = vscode
