🔧 Update tmux to use 256 colors
I was seeing an issue with my prompt when I didn't have this option set.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,3 +20,5 @@ set-window-option -g mode-keys vi
 
 # Reload config file
 bind r source-file ~/.tmux.conf
+
+set -g default-terminal "xterm-256color"
