--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -154,7 +154,9 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # opacity-rule = []
 opacity-rule = [
 "80:class_g = 'URxvt'",
-"80:class_g = 'Emacs'"
+"80:class_g = 'Emacs'",
+"80:class_g = 'rofi'",
+"65:class_g = 'Alacritty'"
 ];
 
 
