✨ NeoVim init re-write
* Initial config
* Using COC
* Basic interface set up

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,6 @@ flycheck_*.el
 /emacs/.emacs.d/nov-places
 /emacs/.emacs.d/projectile-bookmarks.eld
 /emacs/.emacs.d/transient/
+
+# NeoVim plugins
+*/**/plugged
