--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -7,18 +7,18 @@ window:
 
 font:
   normal:
-    family: Iosevka Nerd Font Mono
-    style: Medium
+    family: VictorMono
+    style: Regular
     
   italic:
-    family: Iosevka Nerd Font Mono
+    family: VictorMono
     style: Italic
 
   bold:
-    family: Iosevka Nerd Font Mono
-    style: Bold
+    family: VictorMono
+    style: Medium
 
-  size: 15
+  size: 13
 
   use_thin_strokes: true
 
