--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,19 +1,22 @@
 [core]
-	editor = vim
+	editor = nvim
 [commit]
 	verbose = true
 	template = /Users/nland/.git_commit_message_template
 [user]
 	name = Nick Land
 	email = land.d.nicholas@gmail.com
+  # define command which will be used when "nvim" is set as a merge tool
+[mergetool "nvim"]
+  cmd = nvim -f -c \"Gdiffsplit!\" \"$MERGED\"
+# set "nvim" as tool for merging
 [merge]
-    tool = vscode
-[mergetool "vscode"]
-    cmd = code --wait $MERGED
-[diff]
-    tool = vscode
-[difftool "vscode"]
-    cmd = code --wait --diff $LOCAL $REMOTE
+  tool = nvim
+# automatically launch merge tool without displaying a prompt
+ [diff]
+    tool = vimdiff
+[difftool]
+    prompt = false
 [url "git@gitlab.com:"]
 	insteadOf = https://gitlab.com/
 [filter "lfs"]
