--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -7,85 +7,85 @@ window:
 
 font:
   normal:
-    family: VictorMono Nerd Font
+    family: FiraCode Nerd Font
     style: Medium
     
   italic:
-    family: VictorMono Nerd Font
+    family: FiraCode Nerd Font
     style: Italic
 
   bold:
-    family: VictorMono Nerd Font
+    family: FiraCode Nerd Font
     style: Bold
 
   size: 13
 
   use_thin_strokes: true
 
-import:
-  - ~/.config/alacritty/dracula.yml
+# import:
+#   - ~/.config/alacritty/dracula.yml
 
-# colors:
-#   # Default colors
-#   primary:
-#     background: '0x1e2127'
-#     foreground: '0xabb2bf'
+colors:
+  # Default colors
+  primary:
+    background: '0x0d1117'
+    foreground: '0xc9d1d9'
 
-#     # Bright and dim foreground colors
-#     #
-#     # The dimmed foreground color is calculated automatically if it is not present.
-#     # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
-#     # is `false`, the normal foreground color will be used.
-#     #dim_foreground: '0x9a9a9a'
-#     bright_foreground: '0xe6efff'
+    # Bright and dim foreground colors
+    #
+    # The dimmed foreground color is calculated automatically if it is not present.
+    # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
+    # is `false`, the normal foreground color will be used.
+    #dim_foreground: '0x9a9a9a'
+    bright_foreground: '0xf0f6fc'
 
-#   # Cursor colors
-#   #
-#   # Colors which should be used to draw the terminal cursor. If these are unset,
-#   # the cursor color will be the inverse of the cell color.
-#   #cursor:
-#   #  text: '0x000000'
-#   #  cursor: '0xffffff'
+  # Cursor colors
+  #
+  # Colors which should be used to draw the terminal cursor. If these are unset,
+  # the cursor color will be the inverse of the cell color.
+  #cursor:
+  #  text: '0x000000'
+  #  cursor: '0xffffff'
 
-#   # Normal colors
-#   normal:
-#     black:   '0x1e2127'
-#     red:     '0xe06c75'
-#     green:   '0x98c379'
-#     yellow:  '0xd19a66'
-#     blue:    '0x61afef'
-#     magenta: '0xc678dd'
-#     cyan:    '0x56b6c2'
-#     white:   '0x828791'
+  # Normal colors
+  normal:
+    black:   '0x161b22'
+    red:     '0xf85149'
+    green:   '0x2ea043'
+    yellow:  '0xbb8009'
+    blue:    '0x388bfd'
+    magenta: '0xdb61a2'
+    cyan:    '0xa371f7'
+    white:   '0xf0f6fc'
 
-#   # Bright colors
-#   bright:
-#     black:   '0x5c6370'
-#     red:     '0xe06c75'
-#     green:   '0x98c379'
-#     yellow:  '0xd19a66'
-#     blue:    '0x61afef'
-#     magenta: '0xc678dd'
-#     cyan:    '0x56b6c2'
-#     white:   '0xe6efff'
+  # Bright colors
+  bright:
+    black:   '0x5c6370'
+    red:     '0xe06c75'
+    green:   '0x98c379'
+    yellow:  '0xd19a66'
+    blue:    '0x61afef'
+    magenta: '0xc678dd'
+    cyan:    '0x56b6c2'
+    white:   '0xe6efff'
 
-#   # Dim colors
-#   #
-#   # If the dim colors are not set, they will be calculated automatically based
-#   # on the `normal` colors.
-#   dim:
-#     black:   '0x1e2127'
-#     red:     '0xe06c75'
-#     green:   '0x98c379'
-#     yellow:  '0xd19a66'
-#     blue:    '0x61afef'
-#     magenta: '0xc678dd'
-#     cyan:    '0x56b6c2'
-#     white:   '0x828791'
+  # Dim colors
+  #
+  # If the dim colors are not set, they will be calculated automatically based
+  # on the `normal` colors.
+  dim:
+    black:   '0x1e2127'
+    red:     '0xe06c75'
+    green:   '0x98c379'
+    yellow:  '0xd19a66'
+    blue:    '0x61afef'
+    magenta: '0xc678dd'
+    cyan:    '0x56b6c2'
+    white:   '0x828791'
 
-#   # Indexed Colors
-#   #
-#   # The indexed colors include all colors from 16 to 256.
-#   # When these are not set, they're filled with sensible defaults.
-#   #indexed_colors:
-#   #  - { index: 16, color: '0x000000' }
+  # Indexed Colors
+  #
+  # The indexed colors include all colors from 16 to 256.
+  # When these are not set, they're filled with sensible defaults.
+  #indexed_colors:
+  #  - { index: 16, color: '0x000000' }
