🔧 Update git to use credential store
* No longer using `osxkeychain`

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -2,7 +2,7 @@
 	editor = nvim
 [commit]
 	verbose = true
-	template = /Users/nland/.git_commit_message_template
+	template = /home/vagrant/.git_commit_message_template
 [user]
 	name = Nick Land
 	email = land.d.nicholas@gmail.com
@@ -25,4 +25,4 @@
 	process = git-lfs filter-process
 	required = true
 [credential]
-	helper = osxkeychain
+	helper = store
