--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,6 +32,7 @@ bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
+# set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @dracula-show-powerline true
 
 # Other examples:
