--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,9 +3,11 @@
 [commit]
 	verbose = true
 	template = /home/nland/.git_commit_message_template
+	gpgsign = true
 [user]
 	name = Nick Land
 	email = land.d.nicholas@gmail.com
+	signingkey = land.d.nicholas@gmail.com
   # define command which will be used when "nvim" is set as a merge tool
 [mergetool "nvim"]
   cmd = nvim -f -c \"Gdiffsplit!\" \"$MERGED\"
