--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,13 +1,14 @@
 [core]
 	editor = nvim
+	pager = diff-so-fancy | less --tabs=4 -RFX
 [commit]
 	verbose = true
-	template = /home/nland/.git_commit_message_template
+	template = ~/.git_commit_message_template
 	gpgsign = true
 [user]
-	name = Nick Land
 	email = land.d.nicholas@gmail.com
-	signingkey = land.d.nicholas@gmail.com
+	name = Nick Land
+	signingKey = BBD8F333AF183C092717D8266CBA386D683EA9B8
   # define command which will be used when "nvim" is set as a merge tool
 [mergetool "nvim"]
   cmd = nvim -f -c \"Gdiffsplit!\" \"$MERGED\"
@@ -30,3 +31,24 @@
 	helper = store
 [pull]
 	rebase = true
+[interactive]
+	diffFilter = diff-so-fancy --patch
+[color]
+	ui = true
+[color "diff-highlight"]
+	oldNormal = red bold
+	oldHighlight = red bold 52
+	newNormal = green bold
+	newHighlight = green bold 22
+[color "diff"]
+	meta = 11
+	frag = magenta bold
+	func = 146 bold
+	commit = yellow bold
+	old = red bold
+	new = green bold
+	whitespace = red reverse
+[gpg]
+	program = /usr/local/MacGPG2/bin/gpg
+[github]
+	user = ndland
