--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ flycheck_*.el
 */**/lua-language-server
 /emacs/.emacs.d/org-roam.db
 /emacs/.emacs.d/history
+nvim/.config/nvim/plugin/packer_compiled.lua
